NEWS 
====

Versioning
----------

Releases will be numbered with the following semantic versioning format:

<major>.<minor>.<patch>

And constructed with the following guidelines:

* Breaking backward compatibility bumps the major (and resets the minor 
  and patch)
* New additions without breaking backward compatibility bumps the minor 
  (and resets the patch)
* Bug fixes and misc changes bumps the patch


CHANGES IN pacman VERSION 0.3.0 - 
----------------------------------------------------------------

BUG FIXES

NEW FEATURES

MINOR FEATURES

IMPROVEMENTS

CHANGES


CHANGES IN pacman VERSION 0.2.0
----------------------------------------------------------------

* The first installation of pacman

* Package designed to assist in package related tasks.
