@@ -8,7 +8,9 @@ Authors@R: c(person("Tyler", "Rinker",
     email = "tyler.rinker@gmail.com"),
     person("Dason", "Kurkiewicz",
     role = c("aut", "ctb"),
-    email = "dasonk@iastate.edu"))
+    email = "dasonk@iastate.edu"),
+    person("Keith", "Hughitt",
+    role = c("ctb")))
 Author: Tyler Rinker [aut, cre, ctb], Dason Kurkiewicz [aut, ctb]
 Maintainer: Tyler Rinker <tyler.rinker@gmail.com>
 Depends:
@@ -18,7 +20,7 @@ Imports:
 Suggests:
     knitr,
     lattice,
-    testthat,
+    testthat (>= 0.9.0),
     XML
 BugReports: https://github.com/trinker/pacman/issues?state=open
 Description: Tools to more conveniently perform tasks
