@@ -4,6 +4,7 @@ S3method(print,search_any)
 S3method(print,wide_table)
 export(p_author)
 export(p_base)
+export(p_boot)
 export(p_citation)
 export(p_cite)
 export(p_cran)
